--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,28 @@
             "errno": 0,
             "msg": "",
             "data": {
+               //  "sub":[
+               //      {
+               //          "active": {
+               //              "name":"elieen",
+               //              "phone": "18618405059",
+               //              "email": "elieen@163.com"
+               //           }
+               //     },
+               //     {
+               //          "active2": {
+               //              "name":"elieen",
+               //              "phone": "18618405059",
+               //              "email": "elieen@163.com"
+               //          }
+               //     }
+               // ],
+               "active": {
+                   "name":"active:elieen",
+                   "phone": "17701321596",
+                   "email": "elieen19870715@163.com"
+                },
+
                "aboutData":{
                   title:"朝韩定于4月27日举行领导人会晤,中方回应--linkxiaoksksk",
                   star:"4.5",
